# junk

./: .gitignore  README
confs/: .gitconfig  .tmux.conf  .vimrc
confs/.config/dein/: plugins.toml  python.toml  rust.toml
confs/.config/fish/: config.fish
confs/.config/nvim/: init.vim
lang/excelVBA/: 000-README.txt  collect_by_xlsxs.txt  macro.txt
lang/java/0000_base/: 00-README.txt  build.gradle
lang/java/0000_base_spring/: 00-README.txt  000-README.txt  Makefile  build.gradle  gradle.properties
lang/java/0001_features/0001_zero_divide/: M.java  Makefile
lang/java/0001_features/0002_enum_like_clz/: 000-README.txt  build.gradle
lang/java/0002_swing/: settings.gradle
lang/java/0002_swing/app/: build.gradle
lang/perl/001_simple_http_serv/: Makefile  hserv.ph
lang/perl/001_simple_http_serv/resources/: index.html
lang/powershell/: mybk.ps1  myworkdir.ps1
lang/python/0002_labs/stdio/: a.py  b.py  c.py
lang/python/0003_chainer/: 000-README  Makefile  a001.py  a002.py  a003.py  a004.py  a005.py  base.py
lang/python/utils/: parserll.py  strutil.py
lang/rustlang/0000_base/: 000-README  Cargo.toml
lang/rustlang/0000_base/benches/: lib.rs
lang/rustlang/0000_base/examples/: ex1.rs
lang/rustlang/0001_features/: 000-README
lang/rustlang/0002_samples/: 000-README
lang/rustlang/sample0002/: Cargo.toml
memo/: git.md  oracle_db.md
tools/durs/: Cargo.toml
tools/durs/src/: main.rs
tools/logparseJ/: .project  build.gradle
tools/mtsline/rust/: Cargo.toml
tools/mtsline/rust/src/: main.rs
tools/mtsline/src/: main.rs
(+51 files in other folders)
