[package]
name = "mtsline"
version = "0.1.0"
authors = ["tfviv79 <tfviv79@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
regex = "1"
anyhow = "1"
thiserror = "1"
lazy_static = "1.4"
chrono = "0.4"

